Bug 989576 - Followup, stop using mParser->GetEncoding(). r=neil